--- a/style.css
+++ b/style.css
@@ -53,6 +53,8 @@ body {
   border: 3px solid #507DBC;
   text-align: center; 
   transition: background 0.5s;
+  margin-right: 20px;
+  margin-left: 20px;
 }
 
 
@@ -63,8 +65,13 @@ body {
   font-weight: bold;
 }
 
-#info a:not(:last-of-type){
-  margin-bottom: 25px;
+
+#info .contacts {
+  display: flex; 
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 50px;
 }
 
 #projects {
@@ -141,5 +148,9 @@ body {
 
   .project a {
     font-size: 12px
+  }
+
+  #info a {
+    margin-bottom: 20px;
   }
 }
