--- a/style.css
+++ b/style.css
@@ -76,6 +76,33 @@ body {
   margin-top: 50px;
 }
 
+#about {
+  
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+#about h1 {
+  margin-top: 20px;
+  color: #507DBC;
+}
+
+#about img {
+  width: 300px;
+  margin-top: 60px;
+  border-radius: 50px;
+  border: 3px solid #507DBC
+}
+
+#about p {
+  color: #A1C6EA;
+  font-size: 24px;
+  width: 70%;
+  text-align: justify;
+  margin-top: 70px
+}
+
 #projects {
   display: flex;
   align-items: center;
@@ -178,5 +205,13 @@ body {
     color: #507DBC;
     font-size: 18px;
     margin: 5px 0 5px 0;
+  }
+
+  #about img {
+    width: 50%;
+  }
+
+  #about p {
+    margin-bottom: 40px;
   }
 }
