--- a/style.css
+++ b/style.css
@@ -77,11 +77,12 @@ body {
 }
 
 #about {
+  height: 100vh;
   width: 100%;
-  
   display: flex;
   align-items: center;
   flex-direction: column;
+  margin-bottom: 100px;
 }
 
 #about h1 {
@@ -198,6 +199,11 @@ body {
     width: 100px
   }
 
+  #info {
+    height: 100%;
+    margin-bottom: 100px;
+  }
+
   #info a {
     margin-bottom: 20px;
   }
@@ -208,11 +214,17 @@ body {
     margin: 5px 0 5px 0;
   }
 
+  #about {
+    height: 100%;
+  }
+
   #about img {
     width: 50%;
   }
 
   #about p {
     margin-bottom: 40px;
+    font-size: 20px;
+    text-align: start;
   }
 }
